Fixed margins of nav menu
Nav menu items were unintentionally overlapping in the current projects page, so I made them stop overlapping.

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header {
 }
 
 #nav-list li {
-    margin: 0.5vw;
+    margin: 1.5em 0.5em;
     list-style: none;
 }
 
